--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -26,6 +26,8 @@
 	
     @import "object/component/containerStatus";
     @import "object/component/containerChart";
+    @import "object/component/dataTable";
+    @import "object/component/detailsDialog";
 
 	/*=====================================================*/
 
