--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -23,7 +23,7 @@
 
 	/* componen */
 	/*=====================================================*/
-	
+
     @import "object/component/containerStatus";
     @import "object/component/containerChart";
     @import "object/component/containerInfo";
@@ -37,6 +37,7 @@
 	/*=====================================================*/
 
     @import "object/project/dashboard";
+    @import "object/project/logs";
 
 	/*=====================================================*/
 
